changed modelling to modeling where usefull

--- a/03_toolchain.tex
+++ b/03_toolchain.tex
@@ -7,7 +7,7 @@ The overall idea on how to achieve a toolchain that fully supports the requireme
 	\caption{modeling workflow \label{fig:modeling_workflow}	}
 \end{figure}
 
-A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modelling workflow that is more suitable and based on the steps necessary using an IDE for the modelling process. Picture \vref{fig:modeling_workflow} depicts this simplified modeling workflow.
+A very extensive discussion of a modeling process can be found in \autocite{Jakeman2006602}. Hence this article targets the quality of the model process itself and does not take into account how this workflow can be supported by tools, we decided to take a much more simpler modeling workflow that is more suitable and based on the steps necessary using an IDE for the modeling process. Picture \vref{fig:modeling_workflow} depicts this simplified modeling workflow.
 
 
 We decided to start with the implementation of the model. Prior steps such as defining the model purpose, specifying model context and so on, like they are recommended in \autocite{Jakeman2006602} are left out intentionally in fact we want to emphasize the use of the IDE and to concentrate on the requirements derived from chapter~\ref{sec:vision_for_a_dsl}. In the following sections we want to explain the different steps and what features the IDE can offer to support the user in more detail. 
@@ -43,7 +43,7 @@ Another important task the user wants to do with his new developed model, is to 
 
 
 The first question is what kind of metadata must a model provide to allow such a further machine based processing, how can it be integrated in the IDE and how can the user control necessary details of the process of meta descriptions.
-Although this is a really important step conceptually, we think that the occurring problems are not difficult to solve from a technical point of view. Hence the underlying problem of describing entities with metadata had occurred also in other domains than in environmental modelling and are solved there already, thus we think that it must be possible to adapt these solutions.
+Although this is a really important step conceptually, we think that the occurring problems are not difficult to solve from a technical point of view. Hence the underlying problem of describing entities with metadata had occurred also in other domains than in environmental modeling and are solved there already, thus we think that it must be possible to adapt these solutions.
 One example, which is very similar to the one described above, is the service oriented architecture (SOA) principle. In this paradigm, software components are provided as (web) service. The service functionality, its input parameters and the output parameters are described in standardized and formal way. In terms of SOA this is mostly done with the Web Service Description Language. If we suppose, that the written environmental models are nothing else than a kind of service or software component, it is obvious that it must be possible to provide meta information of an environmental model. This answers also the question what metadata must be provided by the model. The model itself can be thought of as a black box, which needs some input parameters, makes some calculations based on this input, and returns the processed results. The following list depicts some meta information that are needed following the WSDL approach \autocite{dsl:muetzelfeldt}.
 
 \begin{enumerate}
@@ -59,13 +59,13 @@ One example, which is very similar to the one described above, is the service or
 Besides that rough and overlooking argumentation, there are some existing modeling environments that make use of a very similar concept. Muetzfeld et. al describes in \autocite{dsl:muetzelfeldt} the idea of declarative modeling. The idea there is to describe the whole model in a declarative manner and hence abstract it from the concrete implementation. In order of doing this modeling environments like Simile (see chapter \nameref{sec:similie}), ACSL, Stella, Modelmaker, Powersim or Vensim ``enable a model to be saved to file as a design specification'' \autocite[32]{dsl:muetzelfeldt} which also means that metadata of the model can be described.
 
 
-Another example of the environmental domain, which also topics the description of models through metadata is OpenMI. OpenMI stands for Open Modelling Interface and Environment and its originally purpose is``[...]to facilitate the linking of models.'' \autocite[70]{adgeo-4-69-2005}. In order to do this OpenMI provides a set of standard interfaces that describe model parameters and so on.
+Another example of the environmental domain, which also topics the description of models through metadata is OpenMI. OpenMI stands for Open Modeling Interface and Environment and its originally purpose is``[...]to facilitate the linking of models.'' \autocite[70]{adgeo-4-69-2005}. In order to do this OpenMI provides a set of standard interfaces that describe model parameters and so on.
 
 
 Besides the feasibility of this issue, another question is how the user can generate the necessary metadata for his model. A good example for doing this in the software domain, is JavaDoc. JavaDoc is a tool that allows the Java programmer to automatically generate documentation of his program based on annotations he integrates directly to the source code. The documentation itself is then presented in HTML. This approach has some good key concepts. The first one is that the user can easily provide the necessary meta information through annotations directly where they are needed. Furthermore it separates the final representation from the information itself. To give an example from the environmental domain, OMS also uses annotations to provide metadata of the models. According to David et al. they defined a “annotation standard” for the following features: “(i) simplifying component integration, (ii) implicit autoscaling of simulation models in multicore and multiprocessor environments, (iii) providing for modeling simulation traceability and integrity, and (iv) autodocumentation of models and simulations'' \autocite[2]{dsl:oms-handbook}.
 
 
-We think that it is a good idea to transfer the ideas of JavaDoc/OMS to the toolchain of our environmental modelling IDE. This means that the DSL must provide the possibility to annotate the single entities. Furthermore a tool that generates a model description (may be based on OpenMI) based on these annotations must be developed.
+We think that it is a good idea to transfer the ideas of JavaDoc/OMS to the toolchain of our environmental modeling IDE. This means that the DSL must provide the possibility to annotate the single entities. Furthermore a tool that generates a model description (may be based on OpenMI) based on these annotations must be developed.
 
 
 An alternative approach could be to provide the user a GUI-based tool to gather and edit the meta information. Again, this solution would need a kind of generator that generates a model description based on the metadata.
