--- a/05_conclusion.tex
+++ b/05_conclusion.tex
@@ -18,7 +18,7 @@ A good way how the integration into the DSL, which means the way the user can de
 \par
 Regarding the requirement that the DSL should be able to handle typical operations on its own, we think that this in general feasible with the worked mapping solution between DSL and ontology. For example let us suppose that in the ontology is modeled in such way that a temperature can have several units such as Kelvin, Celsius and Fahrenheit and how these units can be converted into another. Exactly this example is already covered by the NASA Sweet ontologies. If the user now wants to add two different temperature values, the code generator could check that they have the same units using the object model generated, and if not convert them into the same unit before adding them. This process could be completely transparent to the user. Again we are not sure how many and how complex problems would appear when trying to implement this due to the limited project period and missing experience in this field. Moreover we think that it is very difficult to generally offer such typical operations, which hides side effects like unit conversions or interpolation from the user. For us it not clear where and how such internal features can be balanced to facilitate the user instead of interfering him.
 \par
-One open question is how to achieve a DSL that is aware of different modeling paradigms and frameworks. We have omitted that feature totally because we have believed that it would just complicate matters without bringing a real benefit regarding the feasibility of all other issues. Of course it is clear that this point would strongly increase the complexity of designing a DSL and maybe it is impossible. For us this seems to be one of the hardest and most complex problems to solve, especially since we didn’t found an example for a DSL that allows multiple modelling paradigms during the research belonging to all other issues.
+One open question is how to achieve a DSL that is aware of different modeling paradigms and frameworks. We have omitted that feature totally because we have believed that it would just complicate matters without bringing a real benefit regarding the feasibility of all other issues. Of course it is clear that this point would strongly increase the complexity of designing a DSL and maybe it is impossible. For us this seems to be one of the hardest and most complex problems to solve, especially since we didn’t found an example for a DSL that allows multiple modeling paradigms during the research belonging to all other issues.
 \par
 Also for the last two requirements, account for modeling uncertainty and model transparency and defensibility of results we only worked out some very rough ideas and are not sure if they can be implemented in that way. Hence it is very difficult to say at this point if these features are realizable and we think that there is some open work to answer these questions.
 \par %TODO grdive kommentar: say that it could be risky triying to implement this
@@ -26,17 +26,17 @@ To put it in a nutshell, we have worked out some very promising ideas and concep
 
 \section{Thoughts on the project}
 \par
-During the project we encountered a lot of challenges, which were often related to our limited experience and knowledge in the domain of environmental modelling and DSLs. Therefore the first step was to expand the knowledge by reading the papers which were provided by Athanasiadis. These papers were \autocite{dsl:muetzelfeldt}, \autocite{ontology:oom_mapping}, \autocite{Villa2009577}, \autocite{Lloyd:2011:EMF:1994475.1995042}, \autocite{dsl:mernik} and \autocite{dsl:kelly} and gave us a first insight in this huge, but also very interesting topic. %TODO papers einfügen
+During the project we encountered a lot of challenges, which were often related to our limited experience and knowledge in the domain of environmental modeling and DSLs. Therefore the first step was to expand the knowledge by reading the papers which were provided by Athanasiadis. These papers were \autocite{dsl:muetzelfeldt}, \autocite{ontology:oom_mapping}, \autocite{Villa2009577}, \autocite{Lloyd:2011:EMF:1994475.1995042}, \autocite{dsl:mernik} and \autocite{dsl:kelly} and gave us a first insight in this huge, but also very interesting topic. %TODO papers einfügen
 \par
 Although the expanding of the knowledge actually never stopped, we also had to develop our own ideas concerning a DSL which supports the environmental modeller. During the development we had some positive experiences, but we also had to cope with throwbacks from time to time. Positive experiences were for example, when we realized that we were on the right track, as other people already came up with similar ideas and published them in papers. On the other hand we also had some moments, in which we realized that we were in a dead end because our ideas would lead to nothing, as they are not feasible.
 \par
-The lack of basic knowledge with environmental modelling was a big obstacle, which could have been eliminated with a preparation project and some guided support. This preparation project could consist for example in understanding and implementing a simple but complex enough existing model. This idea came up several times during the project, but did not succeed as this process was too time consuming. On the other side, we had a preparing lecture, which was helpful and gave us a first insight into the topic. However this lecture had a theoretical nature, so the practical aspects of modelling were missing.
+The lack of basic knowledge with environmental modeling was a big obstacle, which could have been eliminated with a preparation project and some guided support. This preparation project could consist for example in understanding and implementing a simple but complex enough existing model. This idea came up several times during the project, but did not succeed as this process was too time consuming. On the other side, we had a preparing lecture, which was helpful and gave us a first insight into the topic. However this lecture had a theoretical nature, so the practical aspects of modeling were missing.
 \par
 Another obstacle had an organizational nature, namely the rather big team size, which was prescribed by our university. With eight people it was difficult to provide everybody with useful tasks. Furthermore the level of knowledge and the English skills were very different for everybody. This lead to the problem that some finished reading a paper in short time and could start discussing it, whereas others needed significantly more time. In the beginning the only solution was to wait for everybody to follow-up. Nevertheless this circumstance upset both sides, as the one side started discussing about the topic, while the other were still reading. Vice versa the faster group had to wait until the other group finished reading, and could not work during that time. Fortunately this did not lead to bigger arguments and could be later on solved by splitting the tasks according to the individual preferences.
 \par
-Despite the various problems we have encountered during the project, we have also gained a lot of new knowledge in the field of environmental modelling and the creation of DSLs, hence we have elaborated the basic concepts of designing such a modeling frameworks. Another new experience was the more research nature of the project. As we visit an university of applied science this kind of project is not common for us. Nevertheless it was very interesting, to develop completely new ideas, which were not already published by somebody else.
+Despite the various problems we have encountered during the project, we have also gained a lot of new knowledge in the field of environmental modeling and the creation of DSLs, hence we have elaborated the basic concepts of designing such a modeling frameworks. Another new experience was the more research nature of the project. As we visit an university of applied science this kind of project is not common for us. Nevertheless it was very interesting, to develop completely new ideas, which were not already published by somebody else.
 \par
-Finally we can summarize that, in spite of all problems, the project was a good insight in environmental modelling, ontologies, scientific research and feasibility studies, which we could not have learned and experienced in another context during our studies.   
+Finally we can summarize that, in spite of all problems, the project was a good insight in environmental modeling, ontologies, scientific research and feasibility studies, which we could not have learned and experienced in another context during our studies.   
 
 
 
