--- a/01_abstract.tex
+++ b/01_abstract.tex
@@ -12,7 +12,7 @@ However the underlying and fundamental issue is left out. Modelers would and sho
 
 \section*{Possible Solutions}
 \par
-We propose that the best way to gain this vision is to provide the user with special integrated development environment for environmental modelling like they are known in the software development domain. This IDE must comprise a set of different tools that fulfill the requirements of the vision such as including semantic data types or rich model interfaces through metadata.
+We propose that the best way to gain this vision is to provide the user with special integrated development environment for environmental modeling like they are known in the software development domain. This IDE must comprise a set of different tools that fulfill the requirements of the vision such as including semantic data types or rich model interfaces through metadata.
 \par
 Besides the description of that more overlooking idea, we have also examined some more specific approaches for the two main blocks, the definition of the DSL and how to integrate semantic aspects into the DSL. Regarding the first block, the definition of the DSL we have discussed several ideas and finally decided to take an already existing DSL, called Ocelet and provide a way how to extend it with the necessary features namely the usage of arrays, adding metadata through annotations and access to arbitrary time steps.
 \par
