--- a/02_introduction.tex
+++ b/02_introduction.tex
@@ -1,8 +1,8 @@
 \chapter{Introduction} \label{chap:introduction}
 \par
-Modern information and communication technologies are widely used in almost every field.  It has also influenced the environmental science. Using the power of the new technologies, it is possible to create high quality models, simulations and decision support systems to help environmental scientists improve their research. Environmental modelling is the simplified view of the complex environmental realities. It represents the environmental objects, natural phenomena and physical processes in a logical way. It formalizes the principles of natural sciences to interpret the natural reality. Nowadays, modelling the complex environmental phenomena remains a great challenge. We need to consider the different dimensions and amount of data, structures of different sub components, scalability and adaptability of our models.
+Modern information and communication technologies are widely used in almost every field.  It has also influenced the environmental science. Using the power of the new technologies, it is possible to create high quality models, simulations and decision support systems to help environmental scientists improve their research. Environmental modeling is the simplified view of the complex environmental realities. It represents the environmental objects, natural phenomena and physical processes in a logical way. It formalizes the principles of natural sciences to interpret the natural reality. Nowadays, modeling the complex environmental phenomena remains a great challenge. We need to consider the different dimensions and amount of data, structures of different sub components, scalability and adaptability of our models.
 \par
-These requirements have led to the development of different environmental modelling frameworks, such as CCA, ESMF, TIME, OMS, etc. These frameworks are implemented in general purpose languages, such as C, Java, Fortran, etc. They mostly provide application programming interfaces, which were specially implemented according to the needs of environmental modelling. They help the scientists to develop, adapt, reuse or integrate different models. However, they carry with them many kinds of disadvantages. Software implementations of environmental models are seldom reused by broader communities or in different modelling frameworks, because of the poor semantic of the model interfaces. In most cases, the models are only usable for a specific application. It is hard for other components to make use of the available models, because of the poor communication abilities of the models.
+These requirements have led to the development of different environmental modeling frameworks, such as CCA, ESMF, TIME, OMS, etc. These frameworks are implemented in general purpose languages, such as C, Java, Fortran, etc. They mostly provide application programming interfaces, which were specially implemented according to the needs of environmental modeling. They help the scientists to develop, adapt, reuse or integrate different models. However, they carry with them many kinds of disadvantages. Software implementations of environmental models are seldom reused by broader communities or in different modeling frameworks, because of the poor semantic of the model interfaces. In most cases, the models are only usable for a specific application. It is hard for other components to make use of the available models, because of the poor communication abilities of the models.
 \par
 To overcome the disadvantages of the available model frameworks, domain specific language brings about a lot of benefits. It offers appropriate domain specific syntax and notations, which allows the user to describe a solution at the level of abstraction of the problem domain. It allows validation at the domain level. Environmental scientists can make the best use of the domain specific language, because it follows the domain abstractions and semantics as closely as possible. The build-in functions like analysis, verification, optimization, parallelization and  transformation allow the scientists to create reliable models with high quality and productivity, which are easy to maintain and distribute on other platforms.
 \par
@@ -36,7 +36,7 @@ Domain-specific data structures can be used by the modeler to semantically descr
 \par
 The newly created models will consist of independent logical models and their observations. This is a novel approach, as it is a semantical representation of environmental data sets. In other words, the code for one entity is logically capsulated and separated from other entities.
 \par
-The main idea to achieve this, is to connect the DSL with specific environmental modelling ontologies, as these define the semantics of the environmental terminology.
+The main idea to achieve this, is to connect the DSL with specific environmental modeling ontologies, as these define the semantics of the environmental terminology.
 
 \subsection{Rich model interfaces}
 \par
@@ -99,9 +99,9 @@ The following order was defined:
 	\item Account for modeling uncertainty
 \end{itemize}
 \par
-As a result of the lack of  modelling experience in general and especially the lack of experience with modeling environments it was not possible to implement a DSL that fulfills the above mentioned requirements immediately. The idea was to look at existing modelling frameworks in a first step and afterwards to implement lightweight and easy to understand models with these frameworks to gain experience in modeling on the one hand and to investigate them on strengths and weaknesses on the other hand. Based on this knowledge it should be much easier to define a DSL which integrates the required features. The next chapter gives a rough overview of existing modelling frameworks and examines its strengths and weaknesses regarding the needed features.
+As a result of the lack of  modeling experience in general and especially the lack of experience with modeling environments it was not possible to implement a DSL that fulfills the above mentioned requirements immediately. The idea was to look at existing modeling frameworks in a first step and afterwards to implement lightweight and easy to understand models with these frameworks to gain experience in modeling on the one hand and to investigate them on strengths and weaknesses on the other hand. Based on this knowledge it should be much easier to define a DSL which integrates the required features. The next chapter gives a rough overview of existing modeling frameworks and examines its strengths and weaknesses regarding the needed features.
 
-\section{Existing environmental modelling frameworks}
+\section{Existing environmental modeling frameworks}
 
 \input{02a_similie}
 \input{02b_esmf}
