--- a/feasability_study_for_a_environmental_modelling_language.tex
+++ b/feasability_study_for_a_environmental_modelling_language.tex
@@ -6,7 +6,7 @@
 \large HTW des Saarlandes\\
 Wintersemester 2012-2013\\
 Projektarbeit\\[10mm]
-{\LARGE A Vision for DSLs in environmental modelling}\\
+{\LARGE A Vision for DSLs in environmental modeling}\\
 {\LARGE -}\\
 {\LARGE A feasibility study}\\[10mm]
 }
