changed simile to Simile in Text

--- a/02a_similie.tex
+++ b/02a_similie.tex
@@ -2,12 +2,12 @@
 \par
 Simile is a visual modeling environment, developed originally for the dynamic modeling of ecological and environmental systems, which supports a wide range of ways of representing space, it combines a System Dynamics and an object-based approach. System Dynamics is based on a conceptualization of dynamic systems in terms of stocks and flows, variables and influences \autocite{dsl:simile-simulistics}.
 \par
-Like many other modeling frameworks or software tools, simile supports component-based modeling, which helps to divide a complex system to small modulars, as well as System Dynamics modeling, which is a methodology, mainly used to analyze complex mathematical models and problems. Simile is already a successful modeling software, and it has already been adopted in various scientific researches of agricultural or geographical fields in many different countries. With Simile, model developers are also able to integrate knowledges from various studies, guide the research processes and make prediction. Besides that, they can also share the models they have created over the internet, since the models are save as a text file with a structured format \autocite{dsl:simile-muetzelfeldt}. It means that the models created by Simile may be reusable by other modeling framework for further development.
+Like many other modeling frameworks or software tools, Simile supports component-based modeling, which helps to divide a complex system to small modulars, as well as System Dynamics modeling, which is a methodology, mainly used to analyze complex mathematical models and problems. Simile is already a successful modeling software, and it has already been adopted in various scientific researches of agricultural or geographical fields in many different countries. With Simile, model developers are also able to integrate knowledges from various studies, guide the research processes and make prediction. Besides that, they can also share the models they have created over the internet, since the models are save as a text file with a structured format \autocite{dsl:simile-muetzelfeldt}. It means that the models created by Simile may be reusable by other modeling framework for further development.
 \subsubsection{Technical implementation}
 \par
 Simile is capable of handling different modeling types, which are most commonly used by model developers, such as system dynamics, object oriented models, modular models, population dynamics models, etc \autocite{dsl:simile-simulistics}. It comes up with a set of low-level primitive modeling elements that enable various types of models to be constructed, without using the terms and concepts individually associated with each model type \autocite{dsl:simile-muetzelfeldt}. The Simile modeling language consists of 12 basic modeling elements. In this chapter, we will focus on how these elements can be applied to system dynamics and modular modeling.
 \par
-As we have mentioned above, system dynamic methodology is used to simulate and analyze the behaviors of a complex system. To demonstrate a system dynamic scenario, we often use a stock and flow diagram, which presents the relationship between the volume of a stock and the flows coming into or out of the stock. The volume of the stock accumulates or depletes over time, because of the incoming and outgoing flows. The basic modeling elements from Simile can handle this kind of modeling and provide a visualization tool for users to analyze the changes of the stock in a quantitative way. Simile provide four modeling elements for system dynamics: compartment, flow arrow, variable and influence arrow. The compartment element is used to describe a stock and its status, such as the credit of a bank account, the amount of water volume, etc. Each compartment element of simile should be initialize with a numeric value, which could be calculated with other variables or constants. The flow arrow is visually represented by an incoming or outgoing arrow of a compartment. They cause the increment and decrement of the amount of substances in the compartment. The flow arrow may also connect two different compartment, which means that the substances of one compartment will flow into another compartment. The value of the flow arrow can be a constant or a mathematical expression. The variable element of simile contains a value of a constant or a function. In Simile modeling environment, it serves as a parameter, an intermediate variable, an output variable, etc, for example, it can be the input or output parameter of a component. The influence flow connects two different modeling elements. It represents that the value of one element will be used to calculate the other.
+As we have mentioned above, system dynamic methodology is used to simulate and analyze the behaviors of a complex system. To demonstrate a system dynamic scenario, we often use a stock and flow diagram, which presents the relationship between the volume of a stock and the flows coming into or out of the stock. The volume of the stock accumulates or depletes over time, because of the incoming and outgoing flows. The basic modeling elements from Simile can handle this kind of modeling and provide a visualization tool for users to analyze the changes of the stock in a quantitative way. Simile provide four modeling elements for system dynamics: compartment, flow arrow, variable and influence arrow. The compartment element is used to describe a stock and its status, such as the credit of a bank account, the amount of water volume, etc. Each compartment element of Simile should be initialize with a numeric value, which could be calculated with other variables or constants. The flow arrow is visually represented by an incoming or outgoing arrow of a compartment. They cause the increment and decrement of the amount of substances in the compartment. The flow arrow may also connect two different compartment, which means that the substances of one compartment will flow into another compartment. The value of the flow arrow can be a constant or a mathematical expression. The variable element of Simile contains a value of a constant or a function. In Simile modeling environment, it serves as a parameter, an intermediate variable, an output variable, etc, for example, it can be the input or output parameter of a component. The influence flow connects two different modeling elements. It represents that the value of one element will be used to calculate the other.
 \par
 The following figure shows how a simple system dynamic model in Simile looks like.
 \begin{figure}[h]
